# viime-extract

./: .gitignore  README.md  pyproject.toml  setup.py
chebi/: README.md  merge_db.py
chembl/: README.md  chembl.py  flake.nix  pyproject.toml
data/: MolGenetMetab_136_306_2022.txt
examples/pubmed-search/: search.py
examples/streamlit/: main.py  viime-extract-config.toml
experiments/: docling.toml  refine-all_keywords.toml  refine-only_metabolites.toml  run1.md  run1.toml  run2.md  run2.toml  run3.toml  run4.toml
experiments/38 NIAID papers/: .gitignore  README.md  ingest-to-csvs.py  reformat-output.py
experiments/38 NIAID papers/extracted/: 001-012.pdf.json  1-s2.0-S0009898121004277-main.pdf.json  1-s2.0-S1074761322000462-main.pdf.json  1-s2.0-S2666379123004317-main.pdf.json  (+34 more)
experiments/Abstracts vs Full-Text/: Pubmed_metabolomics_AND_LitCLONGCOVID_filter_.csv  README.md  abstracts-results.json  run_csv_abstract_extraction.py
experiments/Brain Fog/: Brain_Fog_060625.csv  README.md  brain_fog.json  cfs.json  ingest-to-csvs.py  reformat-abstract-results.py
experiments/COOKIE_CUTTER/: README.md  run_csv_abstract_extraction.py
experiments/COVID-19/: README.md
experiments/Colon Cancer/: Pubmed_data_colon_cancer_metabolomics.csv  colon_cancer.json
experiments/elite-controllers/: Elite_controllers_072225.csv  README.md  elite-controllers.json
notebooks/: chunked_extraction.ipynb  fuzzy_chebi_db.ipynb  langchain_exploration.ipynb  schema.ipynb  schema.py
viime_extract/: __init__.py  config.py  extract.py  pdf_extract.py  references.py  schema.py
(+21 files in other folders)
